--- a/06_error_handling_exceptions_debug/0602en_exceptions.ipynb
+++ b/06_error_handling_exceptions_debug/0602en_exceptions.ipynb
@@ -14,9 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m number \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m42\u001b[39m\n\u001b[0;32m      2\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJohn\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 3\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mname\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mnumber\u001b[49m  \u001b[38;5;66;03m# TypeError: can only concatenate str (not \"int\") to str\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
    "source": [
     "number = 42\n",
     "name = \"John\"\n",
@@ -33,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: cannot concatenate 'str' and 'int' data types\n"
+     ]
+    }
+   ],
    "source": [
     "number = 42\n",
     "name = \"John\"\n",
@@ -57,11 +77,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Cannot add an integer and a string.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def add_int_and_string(x, y):\n",
+    "    try:\n",
+    "        result = x + y\n",
+    "        print(\"Sum:\", result)\n",
+    "    except TypeError:\n",
+    "        print(\"Error: Cannot add an integer and a string.\")\n",
+    "\n",
+    "# Example usage:\n",
+    "integer_value = 5\n",
+    "string_value = \"10\"\n",
+    "\n",
+    "add_int_and_string(integer_value, string_value)"
    ]
   },
   {
@@ -116,11 +155,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: The variable 'undefined_variable' is not defined.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def print_undefined_variable():\n",
+    "    try:\n",
+    "        # Attempting to print an undefined variable\n",
+    "        print(undefined_variable)\n",
+    "    except NameError:\n",
+    "        print(\"Error: The variable 'undefined_variable' is not defined.\")\n",
+    "\n",
+    "# Example usage:\n",
+    "print_undefined_variable()"
    ]
   },
   {
@@ -157,11 +212,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Cannot convert 'abc' to an integer.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def convert_to_integer(value):\n",
+    "    try:\n",
+    "        # Attempting to convert the string to an integer\n",
+    "        result = int(value)\n",
+    "        print(\"Converted value:\", result)\n",
+    "    except ValueError:\n",
+    "        print(f\"Error: Cannot convert '{value}' to an integer.\")\n",
+    "\n",
+    "# Example usage:\n",
+    "non_numeric_string = \"abc\"\n",
+    "convert_to_integer(non_numeric_string)\n"
    ]
   },
   {
@@ -197,11 +270,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Cannot divide by zero.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def divide_by_zero(number):\n",
+    "    try:\n",
+    "        # Attempting to divide the number by zero\n",
+    "        result = number / 0\n",
+    "        print(\"Result of division:\", result)\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"Error: Cannot divide by zero.\")\n",
+    "\n",
+    "# Example usage:\n",
+    "number_to_divide = 5\n",
+    "divide_by_zero(number_to_divide)"
    ]
   },
   {
@@ -216,9 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: index exceeds the list's boundaries\n"
+     ]
+    }
+   ],
    "source": [
     "my_list = [1, 2, 3]\n",
     "\n",
@@ -240,11 +339,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Index 10 is out of range for the given list.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def access_list_element(my_list, index):\n",
+    "    try:\n",
+    "        # Attempting to access an element using the specified index\n",
+    "        result = my_list[index]\n",
+    "        print(\"Element at index\", index, \":\", result)\n",
+    "    except IndexError:\n",
+    "        print(f\"Error: Index {index} is out of range for the given list.\")\n",
+    "\n",
+    "# Example usage:\n",
+    "my_list = [1, 2, 3, 4, 5]\n",
+    "out_of_range_index = 10\n",
+    "access_list_element(my_list, out_of_range_index)"
    ]
   },
   {
@@ -282,11 +400,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Key 'gender' does not exist in the given dictionary.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "def access_dictionary_key(my_dict, key):\n",
+    "    try:\n",
+    "        # Attempting to access the value associated with the specified key\n",
+    "        result = my_dict[key]\n",
+    "        print(\"Value for key\", key, \":\", result)\n",
+    "    except KeyError:\n",
+    "        print(f\"Error: Key '{key}' does not exist in the given dictionary.\")\n",
+    "\n",
+    "# Example usage:\n",
+    "my_dictionary = {'name': 'John', 'age': 25, 'city': 'New York'}\n",
+    "nonexistent_key = 'gender'\n",
+    "access_dictionary_key(my_dictionary, nonexistent_key)"
    ]
   },
   {
@@ -350,7 +487,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "class MyClass:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "# Creating an instance of the class\n",
+    "my_instance = MyClass(name='John', age=25)\n",
+    "\n",
+    "def access_attribute(instance):\n",
+    "    try:\n",
+    "        # Attempting to access a nonexistent attribute\n",
+    "        result = instance.address\n",
+    "        print(\"Address:\", result)\n",
+    "    except AttributeError:\n",
+    "        print(\"Error: 'address' attribute does not exist for the given instance.\")\n",
+    "\n",
+    "# Example usage:\n",
+    "access_attribute(my_instance)"
    ]
   },
   {
@@ -397,7 +551,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "class MyClass:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "# Creating an instance of the class\n",
+    "my_instance = MyClass(name='John', age=25)\n",
+    "\n",
+    "def access_attribute(instance, attribute):\n",
+    "    if hasattr(instance, attribute):\n",
+    "        # Checking if the attribute exists\n",
+    "        result = getattr(instance, attribute)\n",
+    "        print(f\"{attribute.capitalize()}: {result}\")\n",
+    "    else:\n",
+    "        print(f\"Error: '{attribute}' attribute does not exist for the given instance.\")\n",
+    "\n",
+    "# Example usage:\n",
+    "access_attribute(my_instance, 'address')"
    ]
   },
   {
@@ -473,7 +644,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "def handle_exceptions():\n",
+    "    try:\n",
+    "        # Example 1: Division by zero\n",
+    "        result1 = 1 / 0\n",
+    "\n",
+    "        # Example 2: Converting a non-numeric string to an integer\n",
+    "        result2 = int(\"abc\")\n",
+    "\n",
+    "        # Example 3: Accessing an element in a list with an out-of-range index\n",
+    "        my_list = [1, 2, 3]\n",
+    "        result3 = my_list[10]\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {type(e).__name__} - {str(e)}\")\n",
+    "\n",
+    "# Example usage:\n",
+    "handle_exceptions()\n"
    ]
   }
  ],
@@ -493,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
