--- a/06_error_handling_exceptions_debug/0601en_error_handling.ipynb
+++ b/06_error_handling_exceptions_debug/0601en_error_handling.ipynb
@@ -234,17 +234,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: 1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "try:\n",
+    "    x = int(input(\"Enter the first number: \"))\n",
+    "    y = int(input(\"Enter the second number: \"))\n",
+    "    result = x / y\n",
+    "    print(\"Result:\", result)\n",
+    "except ValueError:\n",
+    "    print(\"Invalid input, please enter a valid number\")\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Division by zero is not allowed\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
