--- a/07_date_time/0701en_date.ipynb
+++ b/07_date_time/0701en_date.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-10-26 18:58:20\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -36,9 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-16 09:30:26.807554\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -67,9 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-11-26\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import date\n",
     "\n",
@@ -89,9 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-16\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import date\n",
     "\n",
@@ -111,9 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current time: 2024-01-16 09:31:47.703955\n",
+      "After 8 days : 2024-01-24 09:31:47.703955\n",
+      "4 hours ago: 2024-01-16 05:31:47.703955\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime, timedelta\n",
     "\n",
@@ -138,9 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference between dates: 852 days, 0:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Difference between two dates\n",
@@ -161,9 +211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-10-26 19:30:00\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -206,9 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-10-26 19:30:00\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -239,9 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1698334200.0\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from datetime import datetime\n",
@@ -263,9 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-10-26 19:30:00\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from datetime import datetime\n",
@@ -281,9 +363,192 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Pirma užduotis\n",
+    "Parašykite programą, kuri pateiktų dabartinį laiką, bet tik minutes ir sekundes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51:02\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "dabar = datetime.now()\n",
+    "format_string = \"%M:%S\"\n",
+    "laikas = dabar.strftime(format_string)\n",
+    "print(laikas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Antra užduotis\n",
+    "Sukurkite funkciją, kuri priimtų gimimo datą kaip stringą (formatu \"%Y-%m-%d\") ir grąžintų, kiek dienų liko iki jūsų gimtadienio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Liko 1 dienos (-ų) iki gimtadienio.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, date\n",
+    "\n",
+    "def dienos_iki_gimtadienio(gimimo_data):\n",
+    "    gimimo_data_format = datetime.strptime(gimimo_data, \"%Y-%m-%d\")\n",
+    "    siandiena = date.today()\n",
+    "    siandiena = datetime(siandiena.year, siandiena.month, siandiena.day)\n",
+    "    gimtadienio_data = gimimo_data_format.replace(year=siandiena.year)\n",
+    "\n",
+    "    if gimtadienio_data < siandiena:\n",
+    "        gimtadienio_data = gimtadienio_data.replace(year=siandiena.year + 1)\n",
+    "\n",
+    "    skirtumas = gimtadienio_data - siandiena\n",
+    "    return skirtumas.days\n",
+    "\n",
+    "gimimo_data = \"1997-01-17\"\n",
+    "print(f\"Liko {dienos_iki_gimtadienio(gimimo_data)} dienos (-ų) iki gimtadienio.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trečia užduotis\n",
+    "Parašykite programą, kuri priimtų datą ir laiką stringo formatu (pavyzdžiui, \"2023-05-21 15:30\"), pridėtų prie to 48 valandas ir grąžintų naują datą ir laiką stringo formatu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pridėjus 48 valandas: 2023-05-23 15:30\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "def prideti_48_valandas(data_laikas):\n",
+    "    format_string = \"%Y-%m-%d %H:%M\"\n",
+    "    date_object = datetime.strptime(data_laikas, format_string)\n",
+    "    naujas_date_object = date_object + timedelta(hours=48)\n",
+    "    naujas_data_laikas = naujas_date_object.strftime(format_string)\n",
+    "    return naujas_data_laikas\n",
+    "\n",
+    "data_laikas = \"2023-05-21 15:30\"\n",
+    "print(f\"Pridėjus 48 valandas: {prideti_48_valandas(data_laikas)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Praėjus 36 val. bus toks laikas: 2024-01-17 22:17\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "def prideti_36_valandas(data_laikas):\n",
+    "    format_string = \"%Y-%m-%d %H:%M\"\n",
+    "    date_obj  = datetime.strptime(data_laikas, format_string)\n",
+    "    naujas_data_obj = date_obj + timedelta(hours=36)\n",
+    "    naujas_data_laikas = naujas_data_obj.strftime(format_string)\n",
+    "    return naujas_data_laikas\n",
+    "data_laikas = \"2024-1-16 10:17\"\n",
+    "print(f'Praėjus 36 val. bus toks laikas: {prideti_36_valandas(data_laikas)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Quick Assignement 4\n",
     "\n",
-    "Write a program that accepts two periods as timestamps and returns the difference in days between the periods."
+    "Write a program that accepts two periods as timestamps and returns the difference in days between the periods.\n",
+    "\n",
+    "Parašykite programą, kuri priimtų du laikotarpius kaip timestamp'us ir grąžintų laikotarpių skirtumą dienomis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiek dienelių išgyventa kartu 1165 days, 0:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "date1 = datetime(2019, 11, 8,)\n",
+    "date2 = datetime(2023, 1, 16)\n",
+    "difference = date2 - date1\n",
+    "print(\"Tiek dienelių išgyventa kartu\", difference)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Laikotarpių skirtumas dienomis: ((311, 311), (281, 30))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "def skirtumas_dienomis(timestamp1, timestamp2):\n",
+    "    date_object1 = datetime.fromtimestamp(timestamp1)\n",
+    "    date_object2 = datetime.fromtimestamp(timestamp2)\n",
+    "    date_object3 = datetime.fromtimestamp(timestamp3)\n",
+    "    skirtumas = abs(date_object1 - date_object3)\n",
+    "    skirtumas2 = abs(date_object2 - date_object1)\n",
+    "    return skirtumas.days, skirtumas2.days\n",
+    "\n",
+    "    \n",
+    "\n",
+    "timestamp1 = 1671395400\n",
+    "timestamp3 = 1698334200\n",
+    "timestamp2 = 1674000000\n",
+    "print(f\"Laikotarpių skirtumas dienomis: {skirtumas_dienomis(timestamp1, timestamp3), skirtumas_dienomis(timestamp2, timestamp1)}\")"
    ]
   },
   {
@@ -292,8 +557,41 @@
    "source": [
     "### Quick Assignement 5\n",
     "\n",
-    "Create a function that accepts a date as a string (for example, \"06/01/2023\") and returns what day of the week that date is (for example, \"Monday\", \"Tuesday\", etc.)."
+    "Create a function that accepts a date as a string (for example, \"06/01/2023\") and returns what day of the week that date is (for example, \"Monday\", \"Tuesday\", etc.).\n",
+    "\n",
+    "Sukurkite funkciją, kuri priimtų datą kaip stringą (pavyzdžiui, \"2023-06-01\") ir grąžintų, kokia savaitės diena yra ta data (pavyzdžiui, \"Pirmadienis\", \"Antradienis\" ir tt.)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ši data yra Antradienis\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "def savaites_diena(data):\n",
+    "    format_string = \"%Y-%m-%d\"\n",
+    "    date_object = datetime.strptime(data, format_string)\n",
+    "    dienos = [\"Pirmadienis\", \"Antradienis\", \"Trečiadienis\", \"Ketvirtadienis\", \"Penktadienis\", \"Šeštadienis\", \"Sekmadienis\"]\n",
+    "    return dienos[date_object.weekday()]\n",
+    "\n",
+    "data = \"2023-01-17\"\n",
+    "print(f\"Ši data yra {savaites_diena(data)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -312,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
